2011-08-23  Jason Merrill  <jason@redhat.com>

	Core 903 (partial)
	* call.c (null_ptr_cst_p): Only 0 qualifies in C++11.

2011-08-23  Jason Merrill  <jason@redhat.com>

	Core 975
	* decl.c (cxx_init_decl_processing): Initialize
	dependent_lambda_return_type_node.
	* cp-tree.h (cp_tree_index): Add CPTI_DEPENDENT_LAMBDA_RETURN_TYPE.
	(dependent_lambda_return_type_node): Define.
	(DECLTYPE_FOR_LAMBDA_RETURN): Remove.
	* semantics.c (lambda_return_type): Handle overloaded function.
	Use dependent_lambda_return_type_node instead of
	DECLTYPE_FOR_LAMBDA_RETURN.
	(apply_lambda_return_type): Don't check dependent_type_p.
	* pt.c (tsubst_copy_and_build): Handle lambda return type deduction.
	(instantiate_class_template_1): Likewise.
	(tsubst): Don't use DECLTYPE_FOR_LAMBDA_RETURN.
	* mangle.c (write_type): Likewise.
	* typeck.c (structural_comptypes): Likewise.
	(check_return_expr): Handle dependent_lambda_return_type_node.

2011-08-23  Jason Merrill  <jason@redhat.com>

	PR c++/50024
	* semantics.c (maybe_constant_value): Don't try to fold { }.
	* pt.c (build_non_dependent_expr): Don't wrap { }.
	* init.c (build_value_init): Allow scalar value-init in templates.

2011-08-23  Jason Merrill  <jason@redhat.com>

	* semantics.c (potential_constant_expression_1): Allow 'this'.

2011-08-23  Jakub Jelinek  <jakub@redhat.com>

	PR c++/50158
	* typeck.c (cp_build_modify_expr): Call mark_rvalue_use on rhs
	if it has side-effects and needs to be preevaluated.

2011-08-23  Siddhesh Poyarekar  <siddhesh.poyarekar@gmail.com>

	PR c++/50055
	* except.c (begin_eh_spec_block): Build EH_SPEC block on the
	same line as the function.

2011-08-23  Jakub Jelinek  <jakub@redhat.com>

	PR c++/46862
	* class.c (finish_struct_1): If TYPE_TRANSPARENT_AGGR is set on a type
	which doesn't have any fields, clear it and diagnose.

2011-08-18  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
	    Marc Glisse  <marc.glisse@normalesup.org>

	PR libstdc++-v3/1773
	* mangle.c (decl_mangling_context): Call